<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="fill_parent"
        android:id="@+id/content_today_layout"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/content_bg"
        android:layout_margin="10dip">

        <LinearLayout
            android:layout_width="fill_parent"
            android:id="@+id/linearLayout1"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/today_weather_forecast"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/today_wea"
                android:paddingLeft="10dip"
                android:paddingTop="10dip"
                android:paddingRight="10dip"
                android:textColor="@color/white"></TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:id="@+id/linearLayout2"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:id="@+id/linearLayout4"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="0.5">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:id="@+id/linearLayout7"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/textView7"
                        android:layout_height="wrap_content"
                        android:text="@string/days"
                        android:textColor="@color/white"
                        android:layout_marginLeft="20dip"
                        android:paddingTop="5dip"></TextView>

                    <TextView
                        android:text="Text"
                        android:layout_width="wrap_content"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"
                        android:id="@+id/days"
                        android:singleLine="true"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:id="@+id/linearLayout5"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/textView5"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/qiweng"
                        android:layout_marginLeft="20dip"
                        android:paddingTop="5dip"></TextView>

                    <TextView
                        android:text="Text"
                        android:layout_width="wrap_content"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"
                        android:id="@+id/temperature"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:id="@+id/linearLayout6"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/wind"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:id="@+id/textView10"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dip"
                        android:paddingTop="5dip"></TextView>

                    <TextView
                        android:text="Text"
                        android:layout_width="wrap_content"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"
                        android:id="@+id/wind"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:id="@+id/linearLayout9"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/textView12"
                        android:layout_height="wrap_content"
                        android:text="@string/windp"
                        android:textColor="@color/white"
                        android:layout_marginLeft="20dip"
                        android:paddingTop="5dip"></TextView>

                    <TextView
                        android:text="Text"
                        android:layout_width="wrap_content"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"
                        android:id="@+id/winp"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:id="@+id/linearLayout8"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="5dp">
                    <TextView android:layout_width="wrap_content" android:id="@+id/textView11"
                    android:layout_height="wrap_content" android:text="@string/kongqi"
                    android:textColor="@color/white"
                    android:layout_marginLeft="20dip" android:paddingTop="5dip"></TextView>
                    <TextView
                        android:text="Text"
                        android:layout_width="wrap_content"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"
                        android:id="@+id/weather"></TextView>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:id="@+id/linearLayout3"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="0.5">

                <TextView
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:gravity="center"
                    android:layout_marginBottom="10dip"
                    android:id="@+id/city_text"
                    android:layout_marginTop="2dip"></TextView>

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"></ImageView>

            </LinearLayout>
        </LinearLayout>
        <!--<TextView android:text="@string/xiaotieshi"-->
        <!--android:focusable="true" android:clickable="true"-->
        <!--android:textColor="@color/gray"-->
        <!--android:layout_height="wrap_content" android:gravity="right"-->
        <!--android:marqueeRepeatLimit="marquee_forever" android:ellipsize="marquee"-->
        <!--android:focusableInTouchMode="true" android:layout_width="fill_parent"-->
        <!--android:singleLine="true" android:textAppearance="?android:attr/textAppearanceSmall"-->
        <!--android:layout_marginRight="10dip" android:layout_marginLeft="10dip"-->
        <!--android:layout_marginBottom="5dip"-->
        <!--android:id="@+id/xiaotieshi"></TextView>-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:id="@+id/linearLayout11"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginBottom="10dip">

    <ListView android:id="@+id/listView"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:choiceMode="singleChoice"></ListView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:id="@+id/linearLayout10"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginBottom="10dip">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/content_small_bg"
            android:layout_weight="0.25"
            android:id="@+id/content_small_bg1">

            <!--<ImageView-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:src="@drawable/a_0"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:id="@+id/tomorrow_image"></ImageView>-->

            <TextView
                android:text="TextView"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:id="@+id/tomorrow_tianqi"
                android:layout_width="wrap_content"></TextView>

            <TextView
                android:text="TextView"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/tomorrow_qiweng"
                android:layout_width="wrap_content"
                android:layout_marginRight="10dip"
                android:gravity="center"
                android:textColor="@color/black"></TextView>

            <TextView
                android:text="TextView"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearance"
                android:id="@+id/tomorrow_date"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"></TextView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.25"
            android:background="@drawable/content_small_bg"
            android:id="@+id/content_small_bg2">

            <!--<ImageView-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:src="@drawable/a_0"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:id="@+id/afterday_image"></ImageView>-->

            <TextView
                android:text="TextView"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:id="@+id/afterday_tianqi"></TextView>

            <TextView
                android:text="TextView"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dip"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:id="@+id/afterday_qiweng"></TextView>

            <TextView
                android:text="TextView"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearance"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:id="@+id/afterday_date"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/content_small_bg"
            android:layout_weight="0.25"
            android:id="@+id/content_small_bg3">

            <!--<ImageView-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:src="@drawable/a_0"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:id="@+id/nextday_image"></ImageView>-->

            <TextView
                android:text="TextView"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:id="@+id/nextday_tianqi"></TextView>

            <TextView
                android:text="TextView"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dip"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:id="@+id/nextday_qiweng"></TextView>

            <TextView
                android:text="TextView"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearance"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:id="@+id/nextday_date"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/content_small_bg"
            android:layout_weight="0.25"
            android:id="@+id/content_small_bg4">

            <!--<ImageView-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:src="@drawable/a_0"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:id="@+id/forthday_image"></ImageView>-->

            <TextView
                android:text="TextView"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:id="@+id/forthday_tianqi"></TextView>

            <TextView
                android:text="TextView"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dip"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:id="@+id/forthday_qiweng"></TextView>

            <TextView
                android:text="TextView"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearance"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:id="@+id/forthday_date"></TextView>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
